--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "main": "index.js",
   "author": "",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "node_modules/.bin/gulp deploy",
+    "start-dev": "node_modules/.bin/gulp server:dev"
   },
   "license": "ISC",
   "dependencies": {
-    "express": "3.x",
-    "jade": "~1.1.5",
-    "underscore": "^1.8.3",
-    "yamljs": "^0.2.7"
+    "express": "^4.13.4",
+    "jade": "^1.11.0",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "^3.3.6",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3"
   }
 }
