--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "jade": "^1.11.0",
+    "grunt": "^1.0.1",
+    "pug": "^2.0.0-rc.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
